add ability to get a file in a repo
